Agregando titulo y un parrafo
This reverts commit a7180eb31e238ff7f65efe7006b1ec2c6105c9c8.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Revert</p>
+    
+<div>
+    <h1>Titulo de la pagina</h1>
+    <p>Lo faltante</p>
+</div>
+
 </body>
 </html>
